--- a/Changes
+++ b/Changes
@@ -1,13 +1,3 @@
-0.003   2020-06-13  Released-By: PERLANCAR; Urgency: medium
+0.001    2020-06-18  Released-By: PERLANCAR
 
-	- Add themes: Test::RandomANSI16, Test::RandomANSI256.
-
-
-0.002   2020-06-09  Released-By: PERLANCAR; Urgency: medium
-
-	- [bugfix] [theme Test::Random] 'cache' arg was not observed.
-
-
-0.001    2020-06-09  Released-By: PERLANCAR
-
-        - First release.
+        - First, early release.
